Fixed paragraph spacing issue

--- a/style.css
+++ b/style.css
@@ -85,9 +85,6 @@ img {
 
   .content {
     width: 45%;
-    display: flex;
-    flex-flow: row;
-    flex-wrap: wrap;
     margin-left: 10px;
   }
 
